# Xerxes-Agents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  Makefile  README.md  THIRD_PARTY_NOTICES.md  XERXES.md  docker-compose.yml  package.json  pyproject.toml
.agents/projects/: typescript-bun-rewrite.md
.github/workflows/: bun-ci.yml  bun-release.yml  ci.yml  release.yml
docs/: BUN_BUILD.md  Makefile  api-reference.md  bun-docs.json  changelog.md  code-standards.md  codebase-summary.md  conf.py  configuration-guide.md  contributing.md  deployment-guide.md  design-guidelines.md  index.md  make.bat  openclaw_parity.md  project-overview-pdr.md  system-architecture.md  telegram-gateway.md  testing-guide.md
examples/: README.md  cortex_deepsearch_agent.py  cortex_deepsearch_agent.ts  cortex_parallel_benchmark.py  cortex_parallel_benchmark.ts  deepsearch_agent_demo.py  deepsearch_agent_demo.ts  interactive_agent.py  interactive_agent.ts  native_demo_support.ts  openclaw_capabilities_demo.py  openclaw_capabilities_demo.ts  scenario_1_conversational_assistant.py  scenario_1_conversational_assistant.ts  scenario_2_code_analyzer.py  scenario_2_code_analyzer.ts  scenario_3_multi_agent_collaboration.py  scenario_3_multi_agent_collaboration.ts  scenario_4_streaming_research_assistant.py  scenario_4_streaming_research_assistant.ts  textual_tui.py  textual_tui.ts  tsconfig.json
packaging/runtime/: package.json
playground/: .gitignore  README.md  _harness.py  conftest.py  eval.py  eval_hard.py  hard_tasks.json  test_eval.py
scripts/: cleanup_duplicate_docstrings.py  docstring_prompt.md  fix_license_headers.py  format_and_generate_docs.py  generate_docstrings.py  install.sh  real_use_check.py  remove_docstrings.py  swarm_integration_test.py
src/ui-tui/: .gitignore  PROTOCOL.md  STUBS.md  vitest.config.ts
tests/: __init__.py  async_helpers.py  conftest.py  test_agent_meta_tools.py  test_agent_types.py  test_ai_tools.py  test_api_server.py  test_audit.py  test_audit_events.py  test_browser_tools.py  test_channel_adapters.py  test_channels_framework.py  test_circuit_breaker.py  test_cli_export.py  test_cli_install.py  test_cli_one_shot.py  test_cli_update.py  test_coding_tools.py  test_compaction_strategies.py  test_config.py  test_cortex_memory.py  test_cortex_task.py  test_cortex_tool.py  test_data_tools.py  test_dependency.py  test_embedders.py  test_entity_memory.py  test_executors.py  test_executors_detailed.py  test_fallback.py  test_fix_license_headers.py  test_gateway_auth.py  test_google_search.py  test_hooks.py  test_install_script.py  test_llm_base.py  test_logging_config.py  test_loop_detection.py  test_mcp_integration.py  test_memory.py  (+37 more)
tests/acp/: test_acp.py  test_acp_runner.py  test_acp_transport.py
tests/agents/: test_async_subagents.py  test_profile_agent.py  test_profile_decay.py
tests/audit/: test_audit.py  test_audit_events.py  test_otel_exporter.py
tests/auth/: test_auth.py
tests/bridge/: test_claude_code_models.py  test_commands.py  test_interaction_modes.py  test_interactive_requests.py  test_model_selection.py  test_project_dir.py  test_wire_protocol_contract.py  test_wire_tool_ids.py
tests/channels/: test_channels_framework.py  test_messaging_depth.py  test_telegram_gateway.py  test_workspace_import.py
tests/context/: test_advanced_compressor.py  test_compaction_provisioner.py  test_compaction_strategies.py  test_compressor.py  test_headroom.py  test_repo_map.py  test_token_counter.py  test_tool_result_pruner.py  test_tool_result_storage.py
tests/core/: test_basics.py  test_errors.py  test_multimodal.py  test_paths.py  test_streamer_buffer.py
tests/cortex/: test_cortex_memory.py
tests/cron/: __init__.py  test_cron.py
tests/daemon/: test_ask_user_question.py  test_compact_extra_buffers.py  test_compaction_safety.py  test_complete.py  test_context_limit_fallback.py  test_resume_replay.py  test_session_persistence.py  test_session_runtime.py  test_skill_create_interview.py  test_skill_subcommand_trigger.py  test_slash_bulk.py  test_slash_compact.py  test_slash_provider.py  test_slash_steer.py  test_slash_yolo.py
tests/extensions/: test_deepscan_skill_contract.py  test_dependency.py  test_hooks.py  test_pallas_kernel_skill.py  test_plugins.py  test_skill_subcommands.py  test_skills.py  test_skills_enhanced.py  test_skills_guard.py  test_skills_hub.py  test_skills_hub_expansion.py
tests/llms/: test_openai_reasoning.py  test_registry.py
tests/logging/: test_loggings.py
tests/mcp/: test_mcp_integration.py  test_mcp_types.py  test_oauth.py  test_osv.py  test_reconnect.py  test_server.py
tests/memory/: test_context_fencing.py  test_hybrid_retrieval.py  test_memory.py  test_memory_debug.py  test_provider_plugins.py  test_rag_persistence.py  test_storage.py  test_turn_indexer.py  test_user_memory.py  test_user_profile.py  test_vector_storage.py
tests/operators/: test_browser_providers.py  test_operator_managers.py  test_prompt_profiles.py
tests/runtime/: test_agent_memory.py  test_agent_tool_registry.py  test_arg_validation.py  test_auxiliary_client.py  test_bootstrap_prompt.py  test_change_guard.py  test_distribution.py  test_doctor_update_setup.py  test_error_classifier.py  test_interaction_modes.py  test_interrupt.py  test_iteration_budget.py  test_loop_detection.py  test_nudges.py  test_pricing_insights.py  test_process_registry.py  test_project_workspace.py  test_query_engine_compaction.py  test_rate_limit_tracker.py  test_resilience.py  test_runtime_context.py  test_runtime_integration.py  test_tool_cache.py  test_workflow_memory.py
tests/security/: test_policy.py  test_prompt_scanner.py  test_remote_backends.py  test_sandbox.py  test_security_scanners.py
tests/session/: test_branching.py  test_fts_index.py  test_migrations.py  test_session.py  test_session_replay.py  test_session_search.py  test_session_summarizer.py  test_snapshots.py
tests/streaming/: conftest.py  test_claude_code_provider.py  (+14 more)
xerxes/: package.json  tsconfig.json  tsconfig.ui.json  vitest.ui.config.ts
(+1802 files in other folders)
